# audata-vana-satya-proof

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  audata-proof.manifest.template  pyproject.toml  results.json
audata_proof/: __main__.py  config.py  db.py  exc.py  handlers.py  proof.py  users.py  utils.py
audata_proof/model/: model.py
audata_proof/models/: db.py  proof_response.py
demo/input/: account.json
demo/output/: results.json
my_proof/: __main__.py  proof.py
tests/: fprint_strings.py  test_utils.py
