[project]
name = "audata-proof"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "audioread==3.0.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "decorator==5.2.1",
    "fingerprint==0.1.6",
    "greenlet==3.1.1",
    "idna==3.10",
    "joblib==1.4.2",
    "lazy-loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.44.0",
    "loguru==0.7.3",
    "msgpack==1.1.0",
    "numba==0.61.0",
    "numpy==2.1.3",
    "packaging==24.2",
    "platformdirs==4.3.7",
    "pooch==1.8.2",
    "pycparser==2.22",
    "pydantic-settings==2.8.1",
    "pydantic==2.11.2",
    "pydantic-core==2.33.1",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "soundfile==0.13.1",
    "soxr==0.5.0.post1",
    "sqlalchemy==2.0.40",
    "threadpoolctl==3.6.0",
    "typing-inspection==0.4.0",
    "typing-extensions==4.13.1",
    "urllib3==2.3.0",
    "psycopg[binary,pool]>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "pyacoustid>=1.3.0",
    "torch>=2.6.0",
    "speechmos>=0.0.1.1",
    "onnxruntime>=1.21.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[tool.ruff]
line-length = 79
lint.extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
